@@ -1,9 +1,10 @@
-FROM gradle:6.2.1 AS builder
-COPY . .
+FROM gradle:6.2.1-jdk11 AS builder
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
 RUN gradle build --no-daemon 
 
-FROM openjdk:8-jre-alpine
-VOLUME /tmp
-COPY --from=builder build/libs/*.jar /app
-ENTRYPOINT ["java","-cp","app:app/*","net.roeim.test.FooApplication"]
-
+FROM openjdk:11-jre-alpine
+EXPOSE 8080
+RUN mkdir /app
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
